# macromaster

./: .gitignore  .replit  CHANGELOG.md  README.md  analyze_arrow.py  analyze_game_footage.py  bot_core.py  calibrate_terrain.py  check_structure.py  config.py  config_manager.py  create_package.py  default_config.json  direct_input.py  discussion_summary.md  fishing_bot.py  game_window.py  gameplay_learner.py  github_setup.py  gui_components.py  gui_interface.py  install.bat  logger.py  macro_hotkeys.json  macro_interface.py  macro_suggestion_engine.py  macro_visualization.json  macro_visualizer.py  main.py  map_manager.py  mock_environment.py  package-lock.json  package.json  pathfinding.py  pyproject.toml  recorded_macro.json  replit.nix  resource_route_manager.py  setup_directories.py  simple_install.bat  (+20 more)
attached_assets/: Pasted--Starting-Fishing-Bot--1740347450170.txt  Pasted--Starting-Fishing-Bot--1740348425588.txt  Pasted--Starting-Fishing-Bot--1740349652122.txt  Pasted--Starting-Fishing-Bot--1740375274208.txt  Pasted--Starting-Fishing-Bot--1740384781440.txt  Pasted--Starting-Fishing-Bot--1740387691514.txt  Pasted-2025-02-24-07-24-16-043-GUI-INFO-Attempting-to-detect-window-with-title-albion-online-client--1740378357112.txt  Pasted-2025-02-24-11-12-44-333-root-INFO-Logger-initialized-with-file-and-console-output-2025-02-24--1740395789014.txt  Pasted-2025-02-24-11-18-39-100-MacroTester-INFO-DirectInput-initialized-successfully-2025-02-24-11-18-1740398218090.txt  Pasted-2025-02-24-12-08-42-422-MacroTester-INFO-Visualization-initialized-headless-True-2025-02-24-1740405165745.txt  Pasted-INFO-MacroVisualizer-Running-in-headless-mode-2025-02-24-14-29-20-368-MacroTester-INFO-Visuali-1740407819627.txt  Pasted-INFO-MapManager-MapManager-initialized-successfully-INFO-MockEnvironment-MockEnvironment-initialize-1740500941656.txt  (+3 more)
docs/: TODO.md  (+1 more)
(+10 files in other folders)
