[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-sock>=0.7.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "inference-sdk>=0.12.0",
    "numpy>=2.2.3",
    "oauthlib>=3.2.2",
    "openai>=1.64.0",
    "opencv-python>=4.11.0.86",
    "os-sys>=0.9.1",
    "pillow>=11.1.0",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "requests>=2.32.3",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "trafilatura>=2.0.0",
    "transformers>=4.49.0",
    "twilio>=9.4.6",
    "keyboard>=0.13.5",
    "mss>=10.0.0",
    "python-dotenv>=1.0.1",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
